--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</div>
 	</body>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="phonegap.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
